--- a/package.json
+++ b/package.json
@@ -1,54 +1,56 @@
 {
-  "name": "@vitest/example-testing-lib-react",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "build": "tsc && vite build",
-    "coverage": "vitest run --coverage",
-    "dev": "vite",
-    "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui"
-  },
-  "dependencies": {
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-toast": "^1.1.5",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "date-fns": "^3.1.0",
-    "react": "^18.2.0",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
-    "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/node": "^20.10.7",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "latest",
-    "@vitest/coverage-v8": "latest",
-    "@vitest/ui": "latest",
-    "autoprefixer": "^10.4.16",
-    "jsdom": "latest",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "latest",
-    "vitest": "latest"
-  },
-  "stackblitz": {
-    "startCommand": "npm run test:ui"
-  }
+	"name": "@vitest/example-testing-lib-react",
+	"type": "module",
+	"private": true,
+	"scripts": {
+		"build": "tsc && vite build",
+		"coverage": "vitest run --coverage",
+		"dev": "vite",
+		"preview": "vite preview",
+		"test": "vitest",
+		"test:ui": "vitest --ui",
+		"lint": "biome check --apply ."
+	},
+	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.0.4",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-radio-group": "^1.1.3",
+		"@radix-ui/react-select": "^2.0.0",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-switch": "^1.0.3",
+		"@radix-ui/react-toast": "^1.1.5",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"date-fns": "^3.1.0",
+		"react": "^18.2.0",
+		"react-day-picker": "^8.10.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.49.2",
+		"tailwind-merge": "^2.2.0",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.4.1",
+		"@testing-library/jest-dom": "^6.2.0",
+		"@testing-library/react": "^14.1.2",
+		"@testing-library/user-event": "^14.4.3",
+		"@types/node": "^20.10.7",
+		"@types/react": "^18.0.24",
+		"@types/react-dom": "^18.0.8",
+		"@vitejs/plugin-react": "latest",
+		"@vitest/coverage-v8": "latest",
+		"@vitest/ui": "latest",
+		"autoprefixer": "^10.4.16",
+		"jsdom": "latest",
+		"postcss": "^8.4.33",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.2.2",
+		"vite": "latest",
+		"vitest": "latest"
+	},
+	"stackblitz": {
+		"startCommand": "npm run test:ui"
+	}
 }
